# MCNP

./: GUI.py  He3_Plotter.py  analysis_view.py  cli.py  config.json  config_utils.py  dose_view.py  icon.icns  logging_config.py  mesh_bins_helper.py  mesh_view.py  msht_parser.py  pyproject.toml  requirements.txt  run_packages.py  runner_view.py  settings_view.py
Backups/: GUI_test.py  He3_Plotter MCNP4.py  He3_Plotter copy.py
Backups/GUI_1/: GUI.py
docs/: help_text.txt  materials.csv  mesh_dataframe_schema.md
he3_plotter/: __init__.py  analysis.py  config.py  detectors.py  io_utils.py  plots.py
src/mcnp/: __init__.py  cli.py  run_packages.py
src/mcnp/he3_plotter/: __init__.py  analysis.py  config.py  detectors.py  plots.py
src/mcnp/utils/: __init__.py  config_utils.py  mesh_bins_helper.py  volume_utils.py
src/mcnp/views/: __init__.py  analysis_view.py  config_store.py  gui.py  mesh_view.py  runner_view.py  settings_view.py  vedo_plotter.py
src/mcnp/views/analysis/: __init__.py
src/mcnp/views/common/: __init__.py
src/mcnp/views/gui/: __init__.py  __main__.py
src/mcnp/views/mesh/: __init__.py  materials.csv  stl_service.py  vedo_plotter.py
src/mcnp_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_analysis_config.py  test_analysis_open_plot.py  test_analysis_threadpool.py  test_cli.py  test_dose_view.py  test_he3_plotter.py  test_logging_saved_plots.py  test_mesh_bins_helper.py  test_mesh_config.py  test_mesh_view.py  test_msht_parser.py  test_run_packages.py  test_settings_view_config.py  test_vedo_plotter.py  test_volume_utils.py
(+2 files in other folders)
